fix: Homepage main block overflow

--- a/src/commons/modules/Homepage/Homepage.module.css
+++ b/src/commons/modules/Homepage/Homepage.module.css
@@ -35,7 +35,6 @@
 
 .main {
   flex: 9;
-  overflow-x: hidden;
 }
 
 .aside {
